@@ -20,6 +20,8 @@
 		<spring-cloud.version>2024.0.0</spring-cloud.version>
 		<grpc.version>1.81.0</grpc.version>
 		<protobuf.version>3.25.3</protobuf.version>
+		<mockito.version>5.7.1</mockito.version>
+		<bytebuddy.version>1.14.10</bytebuddy.version>
 	</properties>
 
 	<dependencies>
@@ -115,11 +117,19 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
+			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>${mockito.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy</artifactId>
+			<version>${bytebuddy.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -205,6 +215,7 @@
 						<include>**/*Test.java</include>
 						<include>**/*Tests.java</include>
 					</includes>
+					<argLine>-Dnet.bytebuddy.experimental=true</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
